General: - Fix overflow on mobile
Orphan:
- Mobile Spacing between orphans.
- Mobile content padding

--- a/css/mediastyle.css
+++ b/css/mediastyle.css
@@ -286,6 +286,7 @@ section#header nav#nav ul li ul li a:hover span.icon.workwith {
 
 	section#footerbottom span#ft-title {
 		margin-top: 18px;
+		margin-right: 0;
 	}
 
 	section#footerbottom span#ft-title p {
